--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,7 +69,7 @@
         "name": "ILLIXR vk native",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/build-native-vk/main.dbg.exe",
+        "program": "${workspaceFolder}/build-vk/main.opt.exe",
         "args": [
           "--yaml=/home/zekailin00/Desktop/ILLIXR/illixr.yaml",
           "--vis=openvins"
@@ -77,7 +77,7 @@
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
         "environment": [
-            { "name": "LD_LIBRARY_PATH", "value": "/home/zekailin00/Desktop/ILLIXR/build-native-vk/drops/lib"},
+            { "name": "LD_LIBRARY_PATH", "value": "${workspaceFolder}/build-vk/drop/lib"},
             { "name": "ILLIXR_RUN_DURATION", "value": "20000"},
           ],
         "externalConsole": false,
@@ -97,12 +97,16 @@
         "request": "launch",
         "program": "${workspaceFolder}/build-offload/main.dbg.exe",
         "args": [
-          "--yaml=${workspaceFolder}/illixr.yaml"
+          "--yaml=${workspaceFolder}/illixr.yaml",
+          "2>&1",
+          "|",
+          "tee",
+          "logs.txt"
         ],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
         "environment": [
-            { "name": "LD_LIBRARY_PATH", "value": "${workspaceFolder}/build-offload/drop/lib"},
+            { "name": "LD_LIBRARY_PATH", "value": "${workspaceFolder}/build-offload/drop/lib:/home/zekailin00/Downloads/onnxruntime-linux-x64-1.19.2/lib"},
             { "name": "ILLIXR_RUN_DURATION", "value": "20000"},
           ],
         "externalConsole": false,
