--- a/plugins/compute_offload/CMakeLists.txt
+++ b/plugins/compute_offload/CMakeLists.txt
@@ -17,6 +17,10 @@ message("--- directory added")
 
 target_compile_features(${PLUGIN_NAME} PRIVATE cxx_std_17)
 target_include_directories(${PLUGIN_NAME} PRIVATE ${ILLIXR_SOURCE_DIR}/include ${Eigen3_INCLUDE_DIRS})
-target_link_libraries(${PLUGIN_NAME} ${Eigne3_LIBRARIES} spdlog::spdlog)
+target_link_libraries(${PLUGIN_NAME}
+        ${Eigne3_LIBRARIES}
+        spdlog::spdlog
+        ${OpenCV_LIBRARIES}
+)
 
 install(TARGETS ${PLUGIN_NAME} DESTINATION lib)
