--- a/profiles/offload.yaml
+++ b/profiles/offload.yaml
@@ -1,5 +1,5 @@
 # This file was auto generated, take caution if manually editing.
-plugins: offline_imu,offline_cam,gtsam_integrator,pose_prediction,compute_offload,offline_eye,gaze_inference,debugview
+plugins: offline_imu,offline_cam,gtsam_integrator,pose_prediction,compute_offload,offline_eye,gaze_inference,image_decoder,debugview
 build_type: DEBUG
 build_flags: -DCOMPUTE_OFFLOAD
 enable_offload: false
